--- a/predtimechart-config.yml
+++ b/predtimechart-config.yml
@@ -1,68 +1,10 @@
 ---
 rounds_idx: 0
-reference_date_col_name: 'reference_date'
+reference_date_col_name: 'origin_date'
 target_date_col_name: 'target_end_date'
 horizon_col_name: 'horizon'
-initial_checked_models: ['UMass-flusion', 'UMass-trends_ensemble']
-disclaimer: "This is a disclaimer. It presents important information for your stakeholders."
-target_data_file_name: 'target-hospital-admissions.csv'
-task_id_text:
-  location: # location,location_name
-    "US": "United States"
-    "01": "Alabama"
-    "02": "Alaska"
-    "04": "Arizona"
-    "05": "Arkansas"
-    "06": "California"
-    "08": "Colorado"
-    "09": "Connecticut"
-    "10": "Delaware"
-    "11": "District of Columbia"
-    "12": "Florida"
-    "13": "Georgia"
-    "15": "Hawaii"
-    "16": "Idaho"
-    "17": "Illinois"
-    "18": "Indiana"
-    "19": "Iowa"
-    "20": "Kansas"
-    "21": "Kentucky"
-    "22": "Louisiana"
-    "23": "Maine"
-    "24": "Maryland"
-    "25": "Massachusetts"
-    "26": "Michigan"
-    "27": "Minnesota"
-    "28": "Mississippi"
-    "29": "Missouri"
-    "30": "Montana"
-    "31": "Nebraska"
-    "32": "Nevada"
-    "33": "New Hampshire"
-    "34": "New Jersey"
-    "35": "New Mexico"
-    "36": "New York"
-    "37": "North Carolina"
-    "38": "North Dakota"
-    "39": "Ohio"
-    "40": "Oklahoma"
-    "41": "Oregon"
-    "42": "Pennsylvania"
-    "44": "Rhode Island"
-    "45": "South Carolina"
-    "46": "South Dakota"
-    "47": "Tennessee"
-    "48": "Texas"
-    "49": "Utah"
-    "50": "Vermont"
-    "51": "Virginia"
-    "53": "Washington"
-    "54": "West Virginia"
-    "55": "Wisconsin"
-    "56": "Wyoming"
-    "60": "American Samoa"
-    "66": "Guam"
-    "69": "Northern Mariana Islands"
-    "72": "Puerto Rico"
-    "74": "U.S. Minor Outlying Islands"
-    "78": "Virgin Islands"
+initial_checked_models: ['delphi-epicast', 'hist-avg']
+initial_xaxis_range:
+  - '2019-08-18'
+  - '2020-03-29'
+disclaimer: "This is a sandbox forecast visualization. It is not designed to support an operational hub, but instead is designed for benchmarking and research purposes."
