update predevals-config.yml to support multiple rounds by adding a rounds_idx configuration property

--- a/predevals-config.yml
+++ b/predevals-config.yml
@@ -1,4 +1,5 @@
-schema_version: https://raw.githubusercontent.com/hubverse-org/hubPredEvalsData/main/inst/schema/v1.0.0/config_schema.json
+schema_version: https://raw.githubusercontent.com/hubverse-org/hubPredEvalsData/main/inst/schema/v1.0.1/config_schema.json
+rounds_idx: 0
 targets:
 - target_id: ili perc
   metrics:
